--- a/.github/workflows/grade.yml
+++ b/.github/workflows/grade.yml
@@ -23,6 +23,7 @@ jobs:
         uses: signalwire-academy/swaig-grader@v1
         with:
           solution-file: solution/agent.py
+          next-assignment: https://classroom.github.com/a/0aS57G0V
 
       - name: Notify progress tracker
         if: always()
